# ats

./: README.md
ats/: Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  reconf
ats-csound/: README.txt  atsnztest.orc  atsnztest.sco  ugnorman.c  ugnorman.h
ats-csound/docs/: atsbuffuncs.html  atsinfo.html  atsread.html  atssynth.html
ats-pd/: README  atsread.c  cl.ats  crt.ats  help-atsread.pd  help-atsreadhelp.pd
ats/doc/: ATSH-doc.htm
ats/src/atsa/: atsa-nogui.c  atsa.c  atsa.h  critical-bands.c  peak-detection.c  residual-analysis.c  residual.c  tracker.c
ats/src/atsh/: about.c  analysis.c  ats-header.c  atsh-analysis.c  atsh-curves.c  atsh-files.c  atsh-graphics.c  atsh-misc.c  atsh-sel.c  atsh-undo.c  atsh.c  atsh.h  curves.c  files.c  get_sparams.c  graphics.c  header.c  help.c  help.h  list_view.c  mask.c  my_curve.c  popup.c  progress.c  sel.c  synth-funcs.c  undo.c
ats/src/sndlib/: clm.c  clm.h  config.h.in  configure  io.c  sndlib-strings.h  sndlib.h
atsa/: Makefile  README  atsa-nogui.c  atsa.c  atsa.h  other-utils.c  peak-detection.c  peak-tracking.c  residual-analysis.c  residual.c  save-load-sound.c  tracker.c  utilities.c
atsa/atsa-sndlib/: README  clm-strings.h  headers.c  makefile.in  sndlib-config.in  sound.c
atsh/: .gdb_history  Makefile  README  about.c  ats-header.c  atsh-analysis.c  atsh-curves.c  atsh-files.c  atsh-graphics.c  atsh-mask.c  atsh-misc.c  atsh-sel.c  atsh-tree  atsh-undo.c  atsh.c  atsh.h  get_sparams.c  list_view.c  my_curve.h  synth-funcs.c  todo.txt
icmc-paper/: ats-pd-example.eps  icmc-ATS_CSOUND.tex
